--- a/app/views/catalog/eadoverview.html.erb
+++ b/app/views/catalog/eadoverview.html.erb
@@ -14,7 +14,10 @@
 
 
 <div class="row">
-  <div class="span9 offset3">
+  <div class="span12">
+    <a href="<%= Tufts::EADMethods.collection_url(@document_fedora) %>"><i class="icon-arrow-left"></i>Collection Home</a>
+  </div>
+  <div class="span12">
     <h2><%= title %></h2>
   </div>
 </div>
