--- a/app/views/catalog/eadinternal.html.erb
+++ b/app/views/catalog/eadinternal.html.erb
@@ -77,7 +77,7 @@
 
         <tr class="table_header">
           <td class="collapse_td">&nbsp;</td>
-          <td class="active" valign="bottom"><a href="#">Title</a></td>
+          <td class="active" valign="bottom">Title</td>
           <td class="locator_td" valign="bottom"><a href="#"></a></td>
           <td class="id_td"  align="left" valign="bottom">&nbsp;</td>
           <td class="availableonline_td" align="center" valign="bottom">Available Online</td>
