Corrected routes to image thumbnails.

--- a/app/views/catalog/eadinternal.html.erb
+++ b/app/views/catalog/eadinternal.html.erb
@@ -110,7 +110,7 @@
         <td align="center" class="availableonline_td">
           <center>
             <ul class="thumbnails">
-              <li class="nothumbnailmargin"><a href="#" class="thumbnail">-- image --<!--<img src="<%= thumbnail %>" alt=""/>--></a></li>
+              <li class="nothumbnailmargin"><a href="#" class="thumbnail"><img src="/file_assets/thumb/<%= thumbnail %>" alt=""/></a></li>
             </ul>
           </center>
         </td>
@@ -131,7 +131,7 @@
         <td align="center" class="availableonline_td">
           <center>
             <ul class="thumbnails">
-              <li class="nothumbnailmargin"><a href="#" class="thumbnail">-- image --<!--<img src="<%= thumbnail %>" alt=""/>--></a></li>
+              <li class="nothumbnailmargin"><a href="#" class="thumbnail"><img src="/file_assets/thumb/<%= thumbnail %>" alt=""/></a></li>
             </ul>
           </center>
         </td>
