--- a/public/assets/css/tdl-bootstrap-overrides.css
+++ b/public/assets/css/tdl-bootstrap-overrides.css
@@ -331,7 +331,7 @@ table {
 }
 
 .table_title {
-    color: #0755AC;
+    color: black;
 }
 
 .table_header {
@@ -381,13 +381,13 @@ table {
     width: 10px;
 }
 
-.locator_td {
+.table .locator_td {
     width: 65px;
     text-align: right;
     padding-right: 7px;
 }
 
-.id_td {
+.table .id_td {
     width: 150px;
 }
 
@@ -401,6 +401,10 @@ table {
 }
 
 .indent {
+    padding-left: 35px;
+}
+
+.table .indent {
     padding-left: 35px;
 }
 
