--- a/app/views/catalog/eadinternal.html.erb
+++ b/app/views/catalog/eadinternal.html.erb
@@ -111,7 +111,7 @@
         <td align="center" class="availableonline_td">
           <center>
             <ul class="thumbnails">
-              <li class="nothumbnailmargin"><a href="#" class="thumbnail"><img src="/file_assets/thumb/<%= thumbnail %>" alt=""/></a></li>
+              <li class="nothumbnailmargin"><a href="/catalog/<%= thumbnail %>" class="thumbnail"><img src="/file_assets/thumb/<%= thumbnail %>" alt=""/></a></li>
             </ul>
           </center>
         </td>
@@ -132,7 +132,7 @@
         <td align="center" class="availableonline_td">
           <center>
             <ul class="thumbnails">
-              <li class="nothumbnailmargin"><a href="#" class="thumbnail"><img src="/file_assets/thumb/<%= thumbnail %>" alt=""/></a></li>
+              <li class="nothumbnailmargin"><a href="/catalog/<%= thumbnail %>" class="thumbnail"><img src="/file_assets/thumb/<%= thumbnail %>" alt=""/></a></li>
             </ul>
           </center>
         </td>
