changed default per page to 25

--- a/app/views/catalog/_sort_and_per_page.html.erb
+++ b/app/views/catalog/_sort_and_per_page.html.erb
@@ -1,45 +1,74 @@
-<div id="sortAndPerPage">
-    <% if false %>
-	<% unless @response.response['numFound'] < 2 %>
-  	<%= form_tag catalog_index_path, :method=>:get, :class=>'per_page' do %>
-  		<%= label_tag(:per_page, "Show") %>
-  		<%= select_tag(:per_page, options_for_select(['10', '20', '50', '100'], h(params[:per_page])), :title => "Number of results to display per page", :onchange => 'this.form.submit()') %>
-      per page
-      <%= search_as_hidden_fields(:omit_keys => [:page, :per_page]) %>
-		
-      <noscript><%= submit_tag 'update' %></noscript>
-  	<% end %>
+<% javascript_includes << "search_controls.js" %>
 
-		<%= form_tag catalog_index_path, :method=>:get, :class=>'sort', :id => "sort_form" do %>
-			<%= label_tag 'sort', 'Sort by' %>
-			<%= select_tag(:sort, options_for_select(sort_fields, h(params[:sort])), :onchange => 'this.form.submit()') %>
-			      
-      <%= search_as_hidden_fields(:omit_keys => [:page, :sort]) %>
-      
-			<noscript><%= submit_tag 'sort results' %></noscript>
-		<% end %>
+<% unless @response.response['numFound'] < 2 %>
+
+    <%= form_tag catalog_index_path, :method => :get, :class => 'sort', :id => "sort_form" do %>
+        <%= label_tag 'sort', 'Sort by' %>
+        <%= select_tag(:sort, options_for_select(sort_fields, h(params[:sort])), {:class=>"",:onchange => 'this.form.submit()'}) %>
+        <%# Removed omit keys %>
+
+        <%= search_as_hidden_fields(:omit_keys => [:page,:per_page, :sort]) %>
+
+        <%= submit_tag 'sort results' %>
     <% end %>
+    <%= form_tag catalog_index_path, :method => :get, :id => 'perpage_form', :class => 'per_page' do %>
+        <%= select_tag(:per_page, options_for_select(['25', '50', '100'], h(params[:per_page])), :title => "Number of results to display per page", :onchange => 'this.form.submit()') %>
+        per page
+
+
+        <%= search_as_hidden_fields(:omit_keys => [:page,:per_page, :sort]) %>
+
+        <%= submit_tag 'update' %>
     <% end %>
-    <div class="row">
-      <div class="span3">
 
-      <button class="btn btn-mini dropdown-toggle" data-toggle="dropdown">Sort by relevance <span class="caret"></span></button>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Relevance</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                </ul>
+<% end %>
+<div class="pull-right" style="margin-bottom: 2px">
 
-      </div>
-      <div class="span3"> <button class="btn btn-mini dropdown-toggle" data-toggle="dropdown">25 per page <span class="caret"></span></button>
-      <ul class="dropdown-menu">
-      <li><a href="#">50</a></li>
-      <li><a href="#">100</a></li>
-      <li><a href="#">Display All</a></li>
-      </ul>
-      </div>
+  <div id="perpage_toggle" class="btn-group pull-right">
+    <button id="perpage_button" class="btn  btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
 
-      <div class="span1 pull-right"><a href="#"><i class="icon-th-list"></i></a></div>
-      <div class="span1 pull-right"><a href="#"><i class="icon-th"></i></a></div>
-      </div><hr>
+
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="perpage_option" href="#">25</a></li>
+      <li><a class="perpage_option" href="#">50</a></li>
+      <li><a class="perpage_option" href="#">100</a></li>
+    </ul>
+  </div>
+  <div id="sort_toggle" class="btn-group pull-right">
+    &nbsp;<button id="sort_button" class="btn  btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
+      Sort by relevance <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="sort_option" href="#">Relevance</a></li>
+      <li><a class="sort_option" href="#">Title</a></li>
+      <li><a class="sort_option" href="#">Creator</a></li>
+      <li><a class="sort_option" href="#">Date</a></li>
+    </ul>
+  </div>
+
 </div>
+<script>
+    $('#perpage_form').hide();
+    $('#sort_form').hide();
+    $('#perpage_toggle').show();
+    $('#sort_toggle').show();
+
+
+    var sort_fields = <%= raw sort_fields.to_json.gsub("</", "<\\/") %>;
+    var sort_controls = new SortAndPerPageControls(sort_fields);
+
+    $('.perpage_option').on('click', function () {
+        sort_controls.perpage_count = $(this).text();
+        sort_controls.updatePerPageButton();
+        $('#perpage_form').submit();
+    });
+
+    $('.sort_option').on('click', function () {
+        sort_controls.sort_col = $(this).text();
+        sort_controls.updateSortButton();
+        $('#sort_form').submit();
+
+    });
+
+</script>
